--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Xyro - Computers</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="logo.png"/>
 
 </head>
 <body>
