--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Xyro - Computers</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="logo.png"/>
+  <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/NN1T5S3/logo.png"/>
 
 </head>
 <body>
