--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
           <h2 class="offer-title">Macbook pro</h2>
           <p class="offer-hook">This a Macbook pro nulla vulputate magna vel odio sagittis bibendium...</p>
           <div class="cart-btn">ADD TO CART</div>
+          
+          <a href="Music.html">
+  <div class="cart-btn">
+    ADD TO CART
+  </div>
+</a>
         </div>
       </div>
       <!-- offer 2 -->
