--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
         <div class="offer-description offer-desc-1">
           <h2 class="offer-title">Macbook pro</h2>
           <p class="offer-hook">This a Macbook pro nulla vulputate magna vel odio sagittis bibendium...</p>
-          <a> href="https://xryo.ml"><div class="cart-btn">ADD TO CART</div></a>
+          
+          <div class="cart-btn">
+    W3Docs
+    <a href="https://www.w3docs.com/">
+      <span class="link"></span>
+    </a>
+  </div>
           
         </div>
       </div>
